<resources>
    <string name="app_name">OBD FUT</string>
    <string name="start_btn">REAL TIME INFORMATION</string>
    <string name="rti_textfield">Lorem ipsum sit dor amet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_fault_code">FaultCodeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_fault_codes">FaultCodesActivity</string>

    <string name="acceleration">Accel</string>
    <string name="coolant">Coolant</string>
    <string name="intake">Intake</string>
    <string name="speed">Speed</string>
    <string name="load">Load</string>
    <string name="throttle">Throttle</string>
    <string name="boost">Boost</string>

    <string name="co2">CO<sub><small><small>2</small></small></sub> Emission</string>
    <string name="co2_desc_1">Your CO<sub><small><small>2</small></small></sub> Emission per Person: </string>
    <string name="co2_desc_2">\n \nHigh carbon dioxide emission leads to negative changes on the lung functions. Besides, it causes environmental pollution.
            \n \nTo decrease carbon dioxide emission of your vehicle you should do your vehicle annual care and use high quality fuel.</string>
    <string name="obdinfo"> This application is developed by Furkan Çakır, Umut Kafadar and Tevfik Mert Azizoğlu </string>

    <string-array name="num_of_people">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
