<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andapp.futcorp.obdfut.SecondFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/imageView1"
                android:src="@drawable/sensor_mask_rti"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.cardiomood.android.controls.gauge.SpeedometerGauge
                android:id="@+id/speed"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textAlignment="center"
                android:id="@+id/textView1"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="57dp"
                android:layout_row="0"
                android:layout_column="0"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:id="@+id/imageView2"
                android:src="@drawable/sensor_mask_rti"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.cardiomood.android.controls.gauge.SpeedometerGauge
                android:id="@+id/accel"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceleration"
                android:textAlignment="center"
                android:id="@+id/textView22"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="52dp"
                android:layout_row="0"
                android:layout_column="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/imageView3"
                android:src="@drawable/sensor_mask_rti"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.cardiomood.android.controls.gauge.SpeedometerGauge
                android:id="@+id/coolant"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coolant"
                android:textAlignment="center"
                android:id="@+id/textView3"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="18dp"
                android:layout_row="1"
                android:layout_column="0"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/imageView4"
                android:src="@drawable/sensor_mask_rti"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.cardiomood.android.controls.gauge.SpeedometerGauge
                android:id="@+id/intake"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intake"
                android:textAlignment="center"
                android:id="@+id/textView4"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="28dp"
                android:layout_row="1"
                android:layout_column="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:id="@+id/imageView5"
                android:src="@drawable/sensor_mask_rti"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.cardiomood.android.controls.gauge.SpeedometerGauge
                android:id="@+id/load"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load"
                android:textAlignment="center"
                android:id="@+id/textView5"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="31dp"
                android:layout_row="2"
                android:layout_column="0"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:id="@+id/imageView6"
                android:src="@drawable/sensor_mask_rti"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <com.cardiomood.android.controls.gauge.SpeedometerGauge
                android:id="@+id/throttle"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:layout_marginBottom="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/throttle"
                android:textAlignment="center"
                android:id="@+id/textView6"
                android:textColor="@color/colorWhite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="19dp"
                android:layout_row="2"
                android:layout_column="1"/>

        </GridLayout>
    </ScrollView>
</RelativeLayout>